--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <!-- NAVBAR -->
   <header class="nav">
     <div class="nav-logo">
-      <img src="logo.png" alt="Logo">
+      <img src="mylogo.png" alt="Logo">
     </div>
 
     <nav class="nav-links">
@@ -128,6 +128,38 @@
       </div>
     </section>
 
+    <!-- EDUCATION SECTION -->
+    <section class="section education" id="education">
+      <div class="section-inner">
+        <h2 class="section-title">Education</h2>
+        <p class="section-text">
+          My academic journey and achievements that built my technical foundation.
+        </p>
+
+        <div class="education-grid">
+
+          <div class="edu-card">
+            <h3>10th Standard</h3>
+            <p class="edu-place">Schooling</p>
+            <div class="edu-score">92.32%</div>
+          </div>
+
+          <div class="edu-card">
+            <h3>1st & 2nd PU</h3>
+            <p class="edu-place">Pre-University</p>
+            <div class="edu-score">95.5%</div>
+          </div>
+
+          <div class="edu-card">
+            <h3>BE – Degree</h3>
+            <p class="edu-place">Dr. Ambedkar Institute of Technology</p>
+            <div class="edu-score">7+ CGPA</div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
     <!-- SKILLS SECTION -->
     <section class="section skills" id="skills">
       <div class="section-inner">
@@ -167,8 +199,18 @@
           </div>
 
           <div class="skill-card">
+            <span class="skill-tag">React (Learning)</span>
+            <p>Component-based modern UI development.</p>
+          </div>
+
+          <div class="skill-card">
             <span class="skill-tag">Git & GitHub</span>
             <p>Version control & collaboration.</p>
+          </div>
+
+          <div class="skill-card">
+            <span class="skill-tag">Figma</span>
+            <p>UI/UX design & prototyping.</p>
           </div>
 
         </div>
@@ -232,9 +274,6 @@
             <div class="project-tags">
               <span>Full Stack</span><span>DBMS</span><span>Java</span><span>SQL</span>
             </div>
-             <a class="project-btn" href="https://celebrated-taiyaki-7bd699.netlify.app/" target="_blank">
-              View Project →
-            </a>
           </article>
 
           <!-- Portfolio Website -->
@@ -291,11 +330,11 @@
       <div class="section-inner">
         <div class="stats-row">
           <div class="stat-card">
-            <span class="stat-number">5+</span>
+            <span class="stat-number">10+</span>
             <span class="stat-label">Mini Projects</span>
           </div>
           <div class="stat-card">
-            <span class="stat-number">8+</span>
+            <span class="stat-number">6+</span>
             <span class="stat-label">Tech & Tools</span>
           </div>
           <div class="stat-card">
@@ -317,7 +356,7 @@
             <p>Designing clean, modern layouts with a focus on usability and visual balance.</p>
           </div>
           <div class="service-card">
-            <h3>Frontend And Backend Development</h3>
+            <h3>Frontend Development</h3>
             <p>Turning designs into responsive, interactive web pages using HTML, CSS & JS.</p>
           </div>
           <div class="service-card">
