Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           </div>
 
           <div class="edu-card">
-            <h3>BE – Degree</h3>
+            <h3>BE – Degree(Computer Science)</h3>
             <p class="edu-place">Dr. Ambedkar Institute of Technology</p>
             <div class="edu-score">7+ CGPA</div>
           </div>
@@ -434,3 +434,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
