--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <!-- NAVBAR -->
   <header class="nav">
     <div class="nav-logo">
-      <img src="mylogo.png" alt="Logo">
+      <img src="logo.png" alt="Logo">
     </div>
 
     <nav class="nav-links">
@@ -434,4 +434,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
