--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <!-- NAVBAR -->
   <header class="nav">
     <div class="nav-logo">
-      <img src="mylogo.png" alt="Logo">
+      <img src="logo.png" alt="Logo">
     </div>
 
     <nav class="nav-links">
@@ -49,3 +49,4 @@
 
 </body>
 </html>
+
