--- a/certificates.html
+++ b/certificates.html
@@ -13,7 +13,7 @@
   <!-- NAVBAR -->
   <header class="nav">
     <div class="nav-logo">
-      <img src="mylogo.png" alt="Logo">
+      <img src="logo.png" alt="Logo">
     </div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
@@ -76,3 +76,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
