--- a/index.html
+++ b/index.html
@@ -241,6 +241,18 @@
 
           <!-- Satellite Image Based Land Classifier -->
           <article class="project-card">
+            <h3>ZentroBuy : Shop fast. Shop smart. Shop ZentroBuy</h3>
+            <p>
+              ZentroBuy is a modern smart-shopping and product management platform designed to make purchasing faster, easier, and more intelligent. It connects customers with high-quality products through a seamless interface, real-time tracking, secure payments, and personalized recommendations.
+            </p>
+            <div class="project-tags">
+              <span>PHP</span><span>Html</span><span>CSS</span><span>Web App</span>
+            </div>
+            <a class="project-btn" href="https://zentrobuy.gt.tc/" target="_blank">
+              View Project →
+            </a>
+          </article>
+          <article class="project-card">
             <h3>Satellite Image Based Land Classifier</h3>
             <p>
               A machine learning model that classifies land regions using satellite imagery.
@@ -424,6 +436,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
