--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <article class="project-card">
             <h3>ZentroBuy : Shop fast. Shop smart. Shop ZentroBuy</h3>
             <p>
-              ZentroBuy is a modern smart-shopping and product management platform designed to make purchasing faster, easier, and more intelligent. It connects customers with high-quality products through a seamless interface, real-time tracking, secure payments, and personalized recommendations.
+              ZentroBuy is a modern smart-shopping and product management platform designed to make purchasing faster, easier, and more intelligent.
             </p>
             <div class="project-tags">
               <span>PHP</span><span>Html</span><span>CSS</span><span>Web App</span>
@@ -436,6 +436,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
