--- a/certificates.html
+++ b/certificates.html
@@ -37,6 +37,17 @@
           <!-- BADGE 1 -->
           <div class="cert-card">
             <img src="b1.png" alt="Google Cloud Badge">
+            <h3>Java Programming</h3>
+            <a href="https://www.mygreatlearning.com/certificate/EVDPSAQP?referrer_code=GLBBMDC86H4EC"
+               class="cert-view-btn" target="_blank">
+               View Credential →
+            </a>
+          </div>
+        <div class="cert-grid">
+
+          <!-- BADGE 1 -->
+          <div class="cert-card">
+            <img src="b1.png" alt="Google Cloud Badge">
             <h3>Google Cloud Skill Badge</h3>
             <a href="https://www.skills.google/public_profiles/fb9e5600-2222-4f62-87e1-43a01144d99f/badges/20320759"
                class="cert-view-btn" target="_blank">
@@ -76,4 +87,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
