--- a/certificates.html
+++ b/certificates.html
@@ -36,7 +36,7 @@
 
           <!-- BADGE 1 -->
           <div class="cert-card">
-            <img src="b1.png" alt="Google Cloud Badge">
+            <img src="java.jpg" alt="Google Cloud Badge">
             <h3>Java Programming</h3>
             <a href="https://www.mygreatlearning.com/certificate/EVDPSAQP?referrer_code=GLBBMDC86H4EC"
                class="cert-view-btn" target="_blank">
@@ -87,5 +87,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
